<resources>

    <string name="app_name">My Application</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change BOTH strings as required -->
    <string name="back4app_app_id">MODIFY</string>
    <string name="back4app_client_key">MODIFY</string>

    <!-- MAIN -->
    <string name="titulo_main">Sensor de Traje de movimiento</string>
    <string name="boton_simular">Crear Sensor</string>
    <string name="boton_historico">Historial de Sensores</string>
    <string name="boton_ultimo">Ultimo Sensor</string>

    <!-- ESTADO ACTUAL -->
    <string name="titulo_estado_sensor">Datos del sensor</string>
    <string name="id_sensor">Identificador del sensor: </string>
    <string name="cabeza">Cabeza: </string>
    <string name="manoDer">Mano derecha: </string>
    <string name="manoIzq">Mano izquierda: </string>
    <string name="pieDer">Pie derecho: </string>
    <string name="pieIzq">Pie izquierdo: </string>
    <string name="idMaquina">ID Máquina: </string>
    <string name="boton_maquina">Ver maquina</string>
    <string name="boton_lista">Volver a la lista</string>
    <string name="boton_vuelta_atras">Volver</string>


    <string name="titulo_estado_maquina">Datos de la máquina</string>
    <string name="id_maquina">Identificador de la maquina: </string>
    <string name="altura">Altura: </string>
    <string name="anchura">Anchura: </string>
    <string name="estado">Estado: </string>
    <string name="bateria">Bateria: </string>
    <string name="simulacion">Simulacion: </string>
    <string name="boton_sensor">Ver sensores</string>

    <!-- HISTORICO -->
    <string name="titulo_historico">Historial de sensores</string>

    <!-- SIMULAR DATOS -->
    <string name="titulo_simular">Simulación</string>
    <string name="texto_simular">Pincha 5 veces la pantalla para introducir los datos de los sensores. El orden será: cabeza, mano derecha, mano izquierda, pie derecho y por último pie izquierdo.</string>
    <string name="boton_guardar">Guardar</string>
    <string name="boton_foto">Sacar una foto</string>


    <string name="boton_vuelta">Volver al menu principal</string>

</resources>